--- a/css/uploader.css
+++ b/css/uploader.css
@@ -26,3 +26,21 @@
   height: 100%;
   width: 0;
 }
+#drag-drop-panel {
+  width: 100%;
+  height: 100px;
+  border: 2px dashed #ddd;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+#drag-drop-panel.dragover {
+  border: 2px dashed #000;
+}
+#drag-drop-panel a {
+  text-decoration: underline;
+}
+#upload-button-container {
+  text-align: center;
+  font-size: 20px;
+  top: 35px;
+}
